labs/incident-arena-12-ingress-service-rbac/manifests/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flag-svc
  namespace: incident-arena-12
spec:
  selector:
    app: feature-flag
  ports:
    - port: 80
      targetPort: 80
