labs/incident-arena-12-ingress-service-rbac/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feature-flag-ingress
  namespace: incident-arena-12
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: flagapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feature-flag-svc
                port:
                  number: 80
